Changed in webpack config to have some basic styling

--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,13 @@
         <h1>LeaderBoard</h1>
     </header>
     <section>
+<div id="mainContainer">
 <div>
-        <div>
+ <div>   
     <h2>Recent Scores</h2>
     <button id="get-btn">Refresh</button>
 </div>
-<div>
+<div id="leaderboardContainer">
     <ul id="leaderboard">
     
     </ul>
@@ -30,6 +31,7 @@
     <input placeholder="Your Score" id ="score" name="score" type="text"><br><br>
     <button id ="send-btn" type="submit">Submit</button>
 </form>
+</div>
 </div>
     </section>
     <script src="main.js"></script>
