--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,8 @@
     <section>
 <div id="mainContainer">
 <div>
- <div>   
-    <h2>Recent Scores</h2>
+ <div id="showScoreHeader">   
+    <h2 class="scoreTitle">Recent Scores</h2>
     <button id="get-btn">Refresh</button>
 </div>
 <div id="leaderboardContainer">
